// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build typesMetadata from a raw WebActionMetadata generate multiple top level fields 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "15",
      "16",
      "17",
      "18",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "15": Object {
    "dirtyInput": false,
    "id": "15",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 1",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
  "16": Object {
    "dirtyInput": false,
    "id": "16",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 2",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
  "17": Object {
    "dirtyInput": false,
    "id": "17",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 3",
    "repeated": false,
    "serverType": "Long",
    "typescriptType": "number",
  },
  "18": Object {
    "dirtyInput": false,
    "id": "18",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 4",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata get nested int 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "2",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "2": Object {
    "dirtyInput": false,
    "id": "2",
    "idChildren": Immutable.OrderedSet [
      "3",
    ],
    "idParent": "0",
    "name": "Nested Int Field",
    "repeated": false,
    "serverType": "noRepeatedInt",
    "typescriptType": null,
  },
  "3": Object {
    "dirtyInput": false,
    "id": "3",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "2",
    "name": "Int Field",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata get non-repeated int 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "1",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "1": Object {
    "dirtyInput": false,
    "id": "1",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Int Field",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata get non-typed GET 1`] = `Immutable.OrderedMap {}`;

exports[`Build typesMetadata from a raw WebActionMetadata get non-typed POST 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "",
    "name": "",
    "repeated": false,
    "serverType": "JSON",
    "typescriptType": null,
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata get repeated nested int 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "6",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "6": Object {
    "dirtyInput": false,
    "id": "6",
    "idChildren": Immutable.OrderedSet [
      "7",
    ],
    "idParent": "0",
    "name": "Repeated Nested Int Field",
    "repeated": true,
    "serverType": "nestedNoRepeatedInt",
    "typescriptType": null,
  },
  "7": Object {
    "dirtyInput": false,
    "id": "7",
    "idChildren": Immutable.OrderedSet [
      "8",
    ],
    "idParent": "6",
    "name": "Repeated Nested Int Field",
    "repeated": false,
    "serverType": "nestedNoRepeatedInt",
    "typescriptType": null,
  },
  "8": Object {
    "dirtyInput": false,
    "id": "8",
    "idChildren": Immutable.OrderedSet [
      "9",
    ],
    "idParent": "7",
    "name": "Nested Int Field",
    "repeated": false,
    "serverType": "noRepeatedInt",
    "typescriptType": null,
  },
  "9": Object {
    "dirtyInput": false,
    "id": "9",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "8",
    "name": "Int Field",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata get repeated nested repeated short 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "10",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "10": Object {
    "dirtyInput": false,
    "id": "10",
    "idChildren": Immutable.OrderedSet [
      "11",
    ],
    "idParent": "0",
    "name": "Nested Repeated Short Field",
    "repeated": true,
    "serverType": "nestedRepeatedShort",
    "typescriptType": null,
  },
  "11": Object {
    "dirtyInput": false,
    "id": "11",
    "idChildren": Immutable.OrderedSet [
      "12",
    ],
    "idParent": "10",
    "name": "Nested Repeated Short Field",
    "repeated": false,
    "serverType": "nestedRepeatedShort",
    "typescriptType": null,
  },
  "12": Object {
    "dirtyInput": false,
    "id": "12",
    "idChildren": Immutable.OrderedSet [
      "13",
    ],
    "idParent": "11",
    "name": "Nested Short Field",
    "repeated": false,
    "serverType": "repeatedShort",
    "typescriptType": null,
  },
  "13": Object {
    "dirtyInput": false,
    "id": "13",
    "idChildren": Immutable.OrderedSet [
      "14",
    ],
    "idParent": "12",
    "name": "Repeated Short Field",
    "repeated": true,
    "serverType": "Short",
    "typescriptType": null,
  },
  "14": Object {
    "dirtyInput": false,
    "id": "14",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "13",
    "name": "Repeated Short Field",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata get repeated short 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "4",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "4": Object {
    "dirtyInput": false,
    "id": "4",
    "idChildren": Immutable.OrderedSet [
      "5",
    ],
    "idParent": "0",
    "name": "Repeated Short Field",
    "repeated": true,
    "serverType": "Short",
    "typescriptType": null,
  },
  "5": Object {
    "dirtyInput": false,
    "id": "5",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "4",
    "name": "Repeated Short Field",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
}
`;
